--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
 				</a>
 				<div class="text mt-3 float-right d-block">
   
-				  <h3 class="heading"><a href="https://github.com/rishabhnmishra/sales_forecasting/tree/main">CineTicket - </a></h3>
+				  <h3 class="heading"><a href="https://cine-ticket-forntend.vercel.app/">CineTicket - </a></h3>
 				  <p>[ JavaScript | TailWind | React.js | Node.js | MongoDB ]</p>
 				  <p>This is a React web app designed specifically for reservations or for booking tickets to the latest cinematic releases.
 					Additionally,the platform also offers feature to rent previously released films.<br>
@@ -430,7 +430,7 @@
 			</div>
 			<div class="col-md-4 d-flex ftco-animate">
 				<div class="blog-entry justify-content-end">
-				<a href="https://github.com/rishabhnmishra/customer_segmentation/blob/main/Customer_Segmentation-final.ipynb" class="block-20 zoom-effect" style="background-image: url('images/Project2.jpg');">
+				<a href="https://github.com/rushikeshchavan95/freshkart.github.io/tree/main/freshkart" class="block-20 zoom-effect" style="background-image: url('images/Project2.jpg');">
 				</a>
 				<div class="text mt-3 float-right d-block">
   
